# beermaker

./: Cargo.toml  LICENSE.txt  README.md  TODO.txt
examples/: marzen.rs  marzen2.rs
src/: brewery.rs  chemistry.rs  equipment.rs  lib.rs  mash.rs  packaging.rs  printer.rs  process.rs  recipe.rs  style.rs  warnings.rs
src/ingredients/: acid.rs  hops.rs  malt.rs  mod.rs  salt.rs  sugar.rs  yeast.rs
src/ingredients/water/: mod.rs  profile.rs  water_adjustment.rs
src/ingredients/yeast/: gallone.rs  mod.rs  provider.rs  strain.rs
src/style/: conditioning.rs  fermentation.rs  mod.rs  origin.rs
src/units/: alkalinity.rs  color.rs  concentration.rs  hardness.rs  mod.rs  temperature.rs  time.rs  volume.rs  weight.rs
src/v2/: equipment.rs  mod.rs  printer.rs  process.rs  recipe.rs  warnings.rs
